@@ -1,6 +1,7 @@
 
 === (next) ===
 CHANGED: updated to the latest Hunter
+NEW: futoin::any copying support
 
 === 0.2.1 (2018-09-23) ===
 FIXED: missing optional construct()/destruct() in IMemPool::Allocator
